# roster_sync

./: .gitignore  README.md  pyproject.toml
src/roster_sync/: __init__.py  auth.py  automation_status.py  cache.py  calendar_mapper.py  cli.py  config.py  dyflexis_client.py  filled_periods.py  google_calendar_client.py  html_parser.py  models.py  preflight.py  rate_limit.py  state_store.py  sync_service.py
tests/: test_auth.py  test_automation_status.py  test_cache.py  test_calendar_mapper.py  test_dyflexis_client.py  test_fetch_caching.py  test_filled_periods.py  test_filled_range_sync.py  test_html_parser.py  test_preflight.py  test_sync_service.py
tests/fixtures/: roster_march_2026.html
